--- a/basics/src/CartComponent.css
+++ b/basics/src/CartComponent.css
@@ -1,6 +1,11 @@
 .CartComponent{
     background-color: aliceblue;
     border: 4px solid #f3e7e7;
-    margin: 4px;
+    margin: 5px;
     padding : 5px; 
+    border-radius: 15px;
+    justify-content: center;
+    align-items: center;
+    margin-top: -299px;
+    margin-left: 30px;
 }
